ya transforma perfectamente, agregadas funciones para pedir datos en unidades agenas a lo internacional"

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       "type": "cppbuild",
       "label": "C/C++: g++.exe compilar archivo activo",
       "command": "g++",
-      "args": ["${fileBasename}", "-fdiagnostics-color=always", "-o", "${fileBasenameNoExtension}", "-g"],
+      "args": ["${fileBasename}", "includes/*", "-fdiagnostics-color=always", "-o", "${fileBasenameNoExtension}", "-g"],
       "options": {
         "cwd": "${fileDirname}"
       },
